Remove method with Optional parameter